fixed overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  /* overflow:auto; */
+  overflow-x: hidden;;
   /* position:fixed; */
 }
 
@@ -60,13 +60,34 @@ ul a {
   margin-bottom: 0;
 }
 .container {
-  width:100%;
+  /* width:90%; */
+  justify-content: flex-end;
+  overflow:auto;
+  display: flex;
+  float:right;
+  clear:both;
 }
 
+p {
+  font-size:larger;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color:#818181;
+  background-color:thistle;
+  padding: 60px;
+  display:flex;
+  /* flex-wrap:wrap-reverse; */
+  text-align: right;
+  justify-content: flex-end;
+  width: 90%;
+  margin-left: 25px;
+  margin-right: 5px;
+  margin-top: 0;
+  
+}
 .sidenav {
   height: 75%; 
   width: 180px; /* Set the width of the sidebar */
-  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+  position:absolute; /* Fixed Sidebar (stay in place on scroll) */
   z-index: 1; 
   top: 25; /* Stay at the top */
   left: 0;
@@ -85,23 +106,6 @@ ul a {
   font-size: 25px;
   color:white;
   display: block;
-}
-
-p {
-  font-size:larger;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  color:#818181;
-  background-color:thistle;
-  padding: 50px;
-  display:flex;
-  /* flex-wrap:wrap-reverse; */
-  text-align: right;
-  justify-content: flex-end;
-  width: 100%;
-  /* margin-left: 25px;
-  margin-right: 10px; */
-  margin-top: 0;
-  
 }
 
 .footer {
